Further accessibility improvements

--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -62,7 +62,7 @@
     {{ block "main" . }}{{ end }}
   </main>
 
-  <footer role="footer">
+  <footer role="contentinfo">
     {{ block "footnotes" . }}
       {{ partial "footnotes" . }}
     {{ end }}
