--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <!-- Header with logo and links. -->
 {{ $url := .URL }}
 
-<header class="header" role="header">
+<header class="header" role="banner">
   <div class="header__container container">
     <a class="header__skip-link" href="{{ .URL }}#MainContent">
       Skip to content
