Removing un-used base URL variables

--- a/site/layouts/_default/distances.html
+++ b/site/layouts/_default/distances.html
@@ -19,5 +19,5 @@
     </div>
   </div>
 
-  <script src="{{ $.Site.BaseURL }}/vendors/chart.min.js"></script>
+  <script src="/vendors/chart.min.js"></script>
 {{ end }}
