Began re-design (didn't like where the design was going)

--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -58,7 +58,7 @@
     {{ partial "header" . }}
   {{ end }}
 
-  <main id="MainContent" class="main responsive-margin-bottom">
+  <main id="MainContent" class="main container">
     {{ block "main" . }}{{ end }}
   </main>
 
