--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -19,15 +19,15 @@
 /**
  * Components.
  */
-@import 'components/block';
-@import 'components/blocks';
+// @import 'components/block';
+// @import 'components/blocks';
 @import 'components/burger';
 @import 'components/card';
-@import 'components/chart';
-@import 'components/client';
-@import 'components/clients';
-@import 'components/footer';
-@import 'components/footnote';
-@import 'components/footnotes';
+// @import 'components/chart';
+// @import 'components/client';
+// @import 'components/clients';
+// @import 'components/footer';
+// @import 'components/footnote';
+// @import 'components/footnotes';
 @import 'components/header';
-@import 'components/map';
+// @import 'components/map';
