--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -16,9 +16,13 @@ html {
   padding: 0;
 }
 
+*:focus {
+  outline: 2px solid rgb(0, 0, 0);
+}
+
 body,
 html {
-  height: 100%;
+  min-height: 100%;
 }
 
 ul,
