--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -5,8 +5,8 @@
  *
  */
 .header {
-  background-color: $COLOR_WHITE;
-  padding: $SPACING_M 0;
+  margin-bottom: $SPACING_M;
+  padding: $SPACING_S 0;
   position: relative;
 
   &__container {
@@ -16,16 +16,18 @@
   }
 
   &__skip-link {
-    background-color: $COLOR_LIGHT_GREY;
+    align-items: center;
+    background-color: $COLOR_WHITE;
     color: $COLOR_BLACK;
-    display: block;
+    display: flex;
     height: 100%;
+    justify-content: center;
     left: 0;
     opacity: 0;
-    padding: $SPACING_M $SPACING_XL;
     pointer-events: none;
     position: absolute;
     top: 0;
+    width: 100%;
 
     &:focus {
       opacity: 1;
@@ -43,12 +45,13 @@
     background-color: transparent;
     border: 0;
     cursor: pointer;
-    height: 50px;
+    height: 54px;
     // Negative margin so padding rests on title height instead
-    margin: -18px 0;
+    margin: -20px 0;
     position: relative;
-    transform: translateX(10px);
-    width: 50px;
+    transform: translateX($SPACING_S);
+    // Force menu button to touch edge of page
+    width: calc(50px + #{$SPACING_S} - 10px);
     z-index: $LAYER_HEADER;
   }
 
@@ -69,7 +72,8 @@
       flex-direction: column;
       height: 100%;
       justify-content: center;
-      padding: $SPACING_S;
+      // Border + padding
+      padding: ($SPACING_S + $SPACING_S);
       position: fixed;
       right: 0;
       top: 0;
@@ -90,32 +94,30 @@
     }
 
     &__link {
-      font-size: ms(3);
+      font-size: 2rem;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
   @include mq($from: medium) {
+    margin-bottom: $SPACING_L;
+    padding: $SPACING_M 0;
+
+    &__skip-link {
+      // Aligning skip link with logo link
+      padding-top: calc(#{$SPACING_L} + 4px);
+    }
+
     &__menu {
       display: none;
     }
 
     &__list {
       display: flex;
-    }
-
-    &__list-item {
-      &:not(:last-child) {
-        margin-right: $SPACING_S;
-      }
-    }
-  }
-
-  @include mq($from: large) {
-    padding: $SPACING_L 0;
-
-    &__skip-link {
-      // Aligning skip link with logo link
-      padding-top: calc(#{$SPACING_L} + 4px);
     }
 
     &__list-item {
