--- a/site/layouts/shortcodes/card.html
+++ b/site/layouts/shortcodes/card.html
@@ -1,12 +1,6 @@
 <!-- Shortcodes > Card. -->
 <!-- Coloured card block. -->
-<div
-  class="
-    card card--{{ lower $.Page.Title }}
-    background-color background-color--texture background-color--{{ lower $.Page.Params.colour }}
-    layout-span responsive-margin-bottom
-  "
->
+<div class="card card--{{ lower $.Page.Title }}">
   {{ if .Get "title" }}
     <h1 class="card__title">{{ .Get "title" }}</h1>
   {{ end }}
