--- a/site/layouts/partials/footnotes.html
+++ b/site/layouts/partials/footnotes.html
@@ -3,24 +3,22 @@
 {{ $url := .URL }}
 {{ $page := .Title }}
 
-<div class="footnotes container responsive-margin-bottom">
+<div class="footnotes container row">
   {{ range .Site.Menus.main }}
     <a
       class="
-       footnotes__footnote footnote footnote--{{ .Identifier}}
-       background-color background-color--{{ .Identifier }}
-       {{ if (eq $url .URL) }}is-hidden{{ end }}
-       {{ if and (eq $page "Index") (eq .Title "Contact") }}is-hidden{{ end }}
-       {{ if and (eq $page "Info") (eq .Title "Contact") }}is-hidden{{ end }}
-       {{ if and (eq $page "Distances") (eq .Title "Stats") }}is-hidden{{ end }}
-       {{ if and (eq $page "Mountains") (eq .Title "Stats") }}is-hidden{{ end }}
+       footnote footnote--{{ .Identifier}}
+       s2 m1
+       {{ if (eq $url .URL) }}is-active{{ end }}
+       {{ if and (eq $page "Distances") (eq .Title "Stats") }}is-active{{ end }}
+       {{ if and (eq $page "Mountains") (eq .Title "Stats") }}is-active{{ end }}
       "
       href="{{ .URL }}"
     >
       <span class="footnote__content">
-        <h2 class="footnote__title">{{ .Pre }} {{ .Title }}</h2>
+        <h2 class="footnote__title h3">{{ .Title }}</h2>
 
-        <p class="footnote__copy">
+        <p class="footnote__copy sub-text">
           {{ .Post }}
         </p>
       </span>
