--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -30,7 +30,7 @@
             <a
               class="
                 header__link
-                text-link
+                navigation
                 {{ if in $url .URL }}is-active{{ end }}"
               href="{{ .URL }}"
             >
