--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -28,7 +28,8 @@
     max-width: 700px;
   }
 
-  .template--about & {
+  .template--about &,
+  .template--info & {
     &__title::after {
       background-color: $COLOR_ORANGE;
     }
