--- a/src/styles/base/animation.scss
+++ b/src/styles/base/animation.scss
@@ -11,6 +11,69 @@ $TIMING_XL: 1.2s;
 
 $EASING: cubic-bezier(0.645, 0.045, 0.355, 1);
 
-@mixin transition($property: transform, $timing: $TIMING_L, $easing: $EASING) {
-  transition: $property $timing $easing;
+@mixin transition($transitions...) {
+  $output: ();
+
+  @each $transition in $transitions {
+    $output: append($output, get-transition-properties($transition), comma);
+  }
+  transition: $output;
+}
+
+/**
+ * Returns the transition properties in the correct format
+ * This function is used by @mixin transition($transitions...)
+ */
+// stylelint-disable
+@function get-transition-properties($transition) {
+  $property: transform;
+  $duration: $TIMING_L;
+  $easing: $EASING;
+  $delay: null;
+
+  $defaultProperties: (
+    $property,
+    $duration,
+    $easing,
+    $delay
+  );
+
+  $properties: ();
+
+  @for $i from 1 through length($defaultProperties) {
+    $p: null;
+
+    @if $i <= length($transition) {
+      $p: nth($transition, $i);
+    } @else {
+      $p: nth($defaultProperties, $i);
+    }
+
+    $properties: append($properties, $p);
+  }
+
+  @return $properties;
+}
+// stylelint-enable
+
+html {
+  &.no-transition {
+    // stylelint-disable-next-line
+    transition: none !important;
+
+    * {
+      // stylelint-disable-next-line
+      transition: none !important;
+    }
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    // stylelint-disable-next-line
+    transition: none !important;
+
+    * {
+      // stylelint-disable-next-line
+      transition: none !important;
+    }
+  }
 }
