--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -35,8 +35,8 @@ $WEIGHT_BOLD: 700;
 /**
  * Element styling.
  */
-html,
 body {
+  @include transition(color);
   color: $COLOR_BLACK;
   font-display: auto;
   font-family: $FONT;
@@ -152,12 +152,10 @@ p > a {
 }
 
 /**
- * External link icon.
+ * Dark mode.
  */
-// stylelint-disable-next-line
-// a:not([href*='craigbaldwin.com']):not([href^='#']):not([href^='/'])::after {
-//   content: ' ↗';
-//   font-size: 1rem;
-//   text-decoration: none;
-//   vertical-align: super;
-// }
+.is-dark {
+  body {
+    color: $COLOR_WHITE;
+  }
+}
