Continued work on dark mode

--- a/src/styles/base/colour.scss
+++ b/src/styles/base/colour.scss
@@ -19,33 +19,5 @@ $COLOR_WHITE: rgb(255, 255, 255);
 $COLOR_DARK_GREY: rgb(124, 124, 124);
 $COLOR_LIGHT_GREY: rgb(242, 242, 242);
 
-$COLOR_LINK: $COLOR_BLACK;
-
-/**
- * Selection.
- */
-::selection {
-  @include transition(background-color, color);
-  background-color: $COLOR_BLACK;
-  color: $COLOR_WHITE;
-}
-
-// stylelint-disable-next-line
-::-moz-selection {
-  @include transition(background-color, color);
-  background-color: $COLOR_BLACK;
-  color: $COLOR_WHITE;
-}
-
-.is-dark {
-  ::selection {
-    background-color: $COLOR_WHITE;
-    color: $COLOR_BLACK;
-  }
-
-  // stylelint-disable-next-line
-  ::-moz-selection {
-    background-color: $COLOR_WHITE;
-    color: $COLOR_BLACK;
-  }
-}
+$COLOR_DARK_MODE_WHITE: $COLOR_LIGHT_GREY;
+$COLOR_LINK: rgb(200, 200, 200);
