--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -13,6 +13,38 @@ html {
   }
 }
 
+/**
+ * Selection.
+ */
+::selection {
+  @include transition(background-color, color);
+  background-color: $COLOR_BLACK;
+  color: $COLOR_WHITE;
+}
+
+// stylelint-disable-next-line
+::-moz-selection {
+  @include transition(background-color, color);
+  background-color: $COLOR_BLACK;
+  color: $COLOR_WHITE;
+}
+
+.is-dark {
+  ::selection {
+    background-color: $COLOR_DARK_MODE_WHITE;
+    color: $COLOR_BLACK;
+  }
+
+  // stylelint-disable-next-line
+  ::-moz-selection {
+    background-color: $COLOR_DARK_MODE_WHITE;
+    color: $COLOR_BLACK;
+  }
+}
+
+/**
+ * Body layout.
+ */
 body {
   margin: $SPACING_S;
 }
