--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -6,18 +6,20 @@
  */
 .footer {
   display: flex;
-  padding-bottom: $SPACING_S;
+  flex-wrap: wrap;
 
   &__item {
+    margin-bottom: $SPACING_S;
+
     &:not(:last-child) {
       margin-right: $SPACING_S;
     }
   }
 
   @include mq($from: medium) {
-    padding-bottom: $SPACING_M;
-
     &__item {
+      margin-bottom: $SPACING_M;
+
       &:not(:last-child) {
         margin-right: $SPACING_M;
       }
