Added accessibility functions

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -4,7 +4,7 @@
 
 <header class="header" role="banner">
   <div class="header__container container">
-    <a class="header__skip-link" href="{{ .URL }}#MainContent">
+    <a class="skip-link" href="{{ .URL }}#MainContent">
       Skip to content
     </a>
 
