Started building stats pages

--- a/src/styles/base/grid.scss
+++ b/src/styles/base/grid.scss
@@ -28,6 +28,7 @@ $SITE_WIDTH: 70rem;
 $SPACING_2XS: 0.5rem;
 $SPACING_XS: 1rem;
 $SPACING_S: 2rem;
+$SPACING_P: 2.5rem; // text paragraph
 $SPACING_M: 3rem;
 $SPACING_L: 6rem;
 $SPACING_XL: 12rem;
